samples/_failures_safe/1761707107_b81722_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_6ac5702f.c: In function ‘matrix_transpose’:
./samples/SAFE/__tmp_6ac5702f.c:142:9: error: expected expression at end of input
  142 |         for (int j =
      |         ^~~
./samples/SAFE/__tmp_6ac5702f.c:142:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_6ac5702f.c:142:9: error: expected declaration or statement at end of input
